# zemljanichka-homework-3

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
labs_src/: CMakeLists.txt
labs_src/lab3/: BackupJob.cpp  BackupJob.h  JobObject.cpp  JobObject.h  Object.cpp  Object.h  Repository.cpp  Repository.h  RestorePoint.cpp  RestorePoint.h  test.cpp
labs_src/test/: README.md
labs_tests/: CMakeLists.txt  lab3_tests.cpp
